kubernetes/restic-rest-server/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: restic
  labels:
    goldilocks.fairwinds.com/enabled: 'true'
  annotations:
    goldilocks.fairwinds.com/vpa-update-mode: InPlaceOrRecreate
    goldilocks.fairwinds.com/vpa-resource-policy: '{"containerPolicies":[{"containerName":"*","controlledValues":"RequestsOnly"}]}'
